--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div class="Container-superior">
     <div class="Header">
       <div class="Header-image">
+        <!-- <h1 style="color: white;">Leitor de PDF</h1> -->
         <img src="./images/joelinton-logo.png" alt="" width="150px" height="auto" />
       </div>
     </div>
