ajustes na responsividade

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <div class="container-lateral">
         <div class="container-user-import">
           <div class="container-import" onclick="{importfile(event)}">
-              <img src="./images/importar.png" alt="icon import navbar" class="imagemImport"/>
-              <input type="file" name="importFile" id="importFile" accept=".pdf" class="importFile">
+              <!-- <img src="./images/importar.png" alt="icon import navbar" class="imagemImport"/> -->
+              <input type="file" name="importFile" id="importFile" accept=".pdf" class="importFile" style="background-image: url(./images/importar.png); background-repeat: no-repeat; background-position: center;">
             <a class="help-button col-sm-4 downloadupaddinvoice"  title="Download uploaded invoice" download><i class="icon-download-alt"></i></a>
           </div>
 
@@ -80,7 +80,7 @@
           </div>
 
           <div class="container-icons__quinto" id="buttonStar">
-            <img src="./images/Star.png" alt="icon Estrela navbar" />
+            <img src="./images/formas.png" alt="icon formas navbar" />
           </div>
         </div>
 
